--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>JS Algorithms</title>
   <script src="app.js" defer></script>
   <script src="fibonacci.js" defer></script>
+  <script src="primeNumber.js" defer></script>
 </head>
 <body>
   
