js algorithms getMin isEven

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>JS Algorithms</title>
   <script src="app.js" defer></script>
   <script src="fibonacci.js" defer></script>
-  <script src="primeNumber.js" defer></script>
+  <script src="is-prime.js" defer></script>
+  <script src="getMin.js" defer></script>
+  <script src="isEven.js" defer></script>
 </head>
 <body>
   
