js algorithms factorial

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="is-prime.js" defer></script>
   <script src="getMin.js" defer></script>
   <script src="isEven.js" defer></script>
+  <script src="isPowerOfTwo.js" defer></script>
+  <script src="factorial.js" defer></script>
+  
 </head>
 <body>
   
