js algorithms recursion in algotithms

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="isEven.js" defer></script>
   <script src="isPowerOfTwo.js" defer></script>
   <script src="factorial.js" defer></script>
+  <script src="recursionInAlgorithms.js" defer></script>
   
 </head>
 <body>
